<resources>
    <string name="app_name">Sample Android App Using Firebase</string>
    <string name="home_text">Home</string>
    <string name="events_title">Events</string>
    <string name="my_events_title">My Events</string>
    <string name="event_name_title">Name</string>
    <string name="event_description_title">Description</string>
    <string name="event_save_title">Save Event</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign In</string>
    <string name="action_sign_up">Sign Up</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="date">Date</string>
    <string name="description">Description</string>
    <string name="name">Name</string>
    <string name="location">Location</string>
    <string name="start_date">Start Date</string>
    <string name="location_hint">location</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_out">Sign Out</string>
    <string name="sign_up">Sign Up</string>
</resources>
